# Boaz

./: .gitignore  Cargo.toml  README.md  build.bat
boaz-core/: Cargo.toml
boaz-core/.cargo/: config.toml
boaz-core/src/: fs_parser.rs  hash_checker.rs  hive_reader.rs  lib.rs  main.rs  yara_engine.rs
boaz-daemon/: Cargo.toml
boaz-daemon/src/: killer.rs  llm_bridge.rs  main.rs  monitor_net.rs  monitor_proc.rs
boaz-net/: package.json  requirements.txt
boaz-net/src/: index.js  rules_engine.js  sniffer.js  sniffer.py  windows_snapshot.js
boaz-net/test/: rules_engine.test.js
boaz-reporter/: package.json  push_to_lark.js
boaz-shared/: Cargo.toml
boaz-shared/src/: lib.rs
boaz-test-threat/: Cargo.toml
boaz-test-threat/src/: main.rs
boaz-ui/: package.json
boaz-ui/src/: index.html
boaz-ui/src-tauri/: Cargo.toml  build.rs  gen-icon.js  tauri.conf.json
boaz-ui/src-tauri/.cargo/: config.toml
boaz-ui/src-tauri/src/: lib.rs  main.rs
docs/: PRODUCT-VISION.md  TESTING.md  UI-PE-白屏问题分析与对策.md  WebView2-PE.md  architecture.md  whitepaper-v2.md  安装Yara.md  安装与使用-最简单.md
rules/: README.md
scripts/: README.md  bitlocker-unlock.ps1  bitlocker-unlock.sh  build-and-pack.ps1  linux-live-quick-setup.sh  merge-phase1-phase2.js  prepare-release.ps1  prepare-ventoy-usb.ps1  prepare-ventoy-usb.sh  setup-webview2.ps1  test-threat-detection.ps1  winpe-quick-setup.ps1
