[package]
name = "boaz-ui"
version = "0.1.0"
edition = "2021"
authors = ["Samuel"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
chrono = "0.4"
url = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
